--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 						<input type="text" name="email" placeholder="E-mail" required="">
 						<input type="text" name="username" placeholder="Username" required="">
 						<input type="password" name="password" placeholder="Password" required="">
-						<input type="password" name="passwordConf" placeholder="Confirm Password" required="">
+						<input type="password" name="passwordConf" placeholder="Confirm Password">
 						<input type="submit" value="REGISTER">
 					</form>
 				</div>
